--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,20 +9,13 @@ services:
     environment:
       SVC_ENV: 'development'
       SVC_PORT: '2222'
-#      BASTION_ACCOUNT: "123"
-#      BASTION_ROLE: "role-allowing-iam-inspect"
-#      BASTION_SSH_GROUP: "iam-group-that-allows-ssh-for-contained-iam-users"
-#      BASTION_SUDO_GROUP: "iam-group-that-allows-sudo-for-contained-iam-users"
-#      BASTION_IAM_USER_PATTERN: "{user}@cloudtruth.com"
-      BASTION_ACCOUNT: "180540047972"
-      BASTION_ROLE: "iam-inspect-for-bastion-ssh"
-      BASTION_SSH_GROUP: "super-admin"
-      BASTION_SUDO_GROUP: "super-admin"
-      BASTION_IAM_USER_PATTERN: "{user}@cloudtruth.com"
+      # Pass through aws environment to make it easier to test locally
       AWS_DEFAULT_REGION: 'us-east-1'
       AWS_ACCESS_KEY_ID:
       AWS_SECRET_ACCESS_KEY:
       AWS_SESSION_TOKEN:
+    env_file:
+      - .env
     volumes:
       - .:/srv/app
       - bundle_cache:/srv/bundler
