do not allow root login

--- a/config/sshd.conf
+++ b/config/sshd.conf
@@ -6,6 +6,7 @@ X11Forwarding yes
 AuthorizedKeysCommand /iampubkeys.sh
 AuthorizedKeysCommandUser root
 
+PermitRootLogin no
 PasswordAuthentication no
 PubkeyAuthentication yes
 AuthorizedKeysFile none
