cleanup/refactoring, fleshed out tests

--- a/config/sshd.conf
+++ b/config/sshd.conf
@@ -2,8 +2,9 @@ PrintMotd no
 AcceptEnv LANG LC_*
 Subsystem	sftp	/usr/lib/openssh/sftp-server
 X11Forwarding yes
+PermitTunnel yes
 
-AuthorizedKeysCommand /iampubkeys.sh
+AuthorizedKeysCommand /usr/sbin/iampubkeys.sh
 AuthorizedKeysCommandUser root
 
 PermitRootLogin no
