build a fat image as well

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,16 @@ script:
   - docker-compose build --build-arg ADDITIONAL_PACKAGES=""
   - docker-compose up -d bastion moto
   - docker-compose run dev test
+  - COMPOSE_PROJECT_NAME=aws-bastion-fat docker-compose build bastion
 
 deploy:
-  provider: script
-  # All master pushes deploy a 'dev' tag.  If TRAVIS_TAG is set, it also gets deployed along with a 'latest' tag
-  script: bash bin/deploy.sh aws-bastion_bastion:latest cloudtruth/aws-bastion dev "${TRAVIS_TAG:+latest}" "${TRAVIS_TAG}"
-  on:
-    branch: master
+  - provider: script
+    # All master pushes deploy a 'dev' tag.  If TRAVIS_TAG is set, it also gets deployed along with a 'latest' tag
+    script: bash bin/deploy.sh aws-bastion_bastion:latest cloudtruth/aws-bastion dev "${TRAVIS_TAG:+latest}" "${TRAVIS_TAG}"
+    on:
+      branch: master
+  - provider: script
+    # All master pushes deploy a 'dev' tag.  If TRAVIS_TAG is set, it also gets deployed along with a 'latest' tag
+    script: bash bin/deploy.sh aws-bastion-fat_bastion:latest cloudtruth/aws-bastion dev-fat "${TRAVIS_TAG:+latest-fat}" "${TRAVIS_TAG}-fat"
+    on:
+      branch: master
