--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,22 @@ script:
 
 deploy:
   - provider: script
-    # All master pushes deploy a 'dev' tag.  If TRAVIS_TAG is set, it also gets deployed along with a 'latest' tag
-    script: bash bin/deploy.sh aws-bastion_bastion:latest cloudtruth/aws-bastion dev "${TRAVIS_TAG:+latest}" "${TRAVIS_TAG}"
+    # Deploy the 'dev' tag on all master pushes
+    script: bash bin/deploy.sh aws-bastion_bastion:latest cloudtruth/aws-bastion dev
     on:
       branch: master
   - provider: script
-    # All master pushes deploy a 'dev' tag.  If TRAVIS_TAG is set, it also gets deployed along with a 'latest' tag
-    script: bash bin/deploy.sh aws-bastion-fat_bastion:latest cloudtruth/aws-bastion dev-fat "${TRAVIS_TAG:+latest-fat}" "${TRAVIS_TAG:+$TRAVIS_TAG-fat}"
+    # Deploy the 'dev-fat' tag for the fat build on all master pushes
+    script: bash bin/deploy.sh aws-bastion-fat_bastion:latest cloudtruth/aws-bastion dev-fat
     on:
       branch: master
+  - provider: script
+    # Deploy the 'latest' and '<git_tag>' tag on all tagged pushes
+    script: bash bin/deploy.sh aws-bastion_bastion:latest cloudtruth/aws-bastion latest "${TRAVIS_TAG}"
+    on:
+      tags: true
+  - provider: script
+    # Deploy the 'latest-fat' and '<git_tag>-fat' tag for the fat build on all tagged pushes
+    script: bash bin/deploy.sh aws-bastion-fat_bastion:latest cloudtruth/aws-bastion latest-fat "${TRAVIS_TAG}-fat"
+    on:
+      tags: true
